# ETL_Stays

./: .gitignore  README.md  main.py  pyproject.toml
config/: CRUD.py  apiconect.py  configDB.py
dags/: dag_owners.py  dag_reservations_historico.py  dag_reservations_incremental.py
sql/: owners.sql  reservations.sql
src/: Transform.py  extract.py  load.py
src/01.collect/: db_finance.py  db_owers_extract.py
