[project]
name = "lenon-collect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastparquet>=2026.3.0",
    "ipykernel>=7.3.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "psycopg2>=2.9.12",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "unidecode>=1.4.0",
]
